test-cases/final-dump/bad_constant_constraint.wybe
?i = "s":int
?s = 1:string
?f = "1.0":float